2021-02-15 [1.42 Bld 194]

- Bugfix      : fix SAVE/RESTORE instructions
- Addition    : add J... variable branch instructions for 180x

2021-02-13 [1.42 Bld 193]

- Addition    : add more flexible integer format configuration
- Addition    : add PORT statement for 8008
- Addition    : add Z80SYNTAX for 8008

2021-01-30 [1.42 Bld 192]

- Addition    : Initial support for Padauk controllers
- Bugfix      : fix ST6 ASCII/ASCIZ instructions

2021-01-21 [1.42 Bld 191]

- Addition    : SC/MP: allow writing registers as 0..3 instead of P0..P3
- Addition    : SC/MP: add x'... notation option for integer literals
- Bugfix      : correct NoICE debug output
- Bugfix      : corect cross reference list output

2021-01-18 [1.42 Bld 190]

- Bugfix      : emit more reasonable error message when trying to
                convert multi-character constant resp. string of
                excessive length to integer
- Addition    : Z8000 Syntax extensions:
                - Add a few aliases for conditions
                - Add a few aliases for flag names
                - Allow Rn^ instead of @Rn for indirect addressing
                - for alternate (AMD) syntax, allow leaving away
                  indirection character for indirectly addressed I/O
- Bugfix      : repair NoICE debug output
- Addition    : add -supmode switch to enable supervisor mode
                right from the beginning

2021-01-10 [1.42 Bld 189]

- Bugfix      : correct encoding of Z8000 CALR instruction
- Bugfix      : string expansion was not done for names of structure
                elements
- Bugfix      : correct inclusion of bit symbols in nested structures
- Addition    : extend list of supported F8 variants
- Addition    : add option to define arrays of structures

2020-12-27 [1.42 Bld 188]

- Bugfix      : correct encoding of Z8000 EI/DI instruction
- Addition    : Add F3850 as target (contribution by Haruo Asano)
- Bugfix      : do not display line numbers in split byte notation
