@@ -11,8 +11,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-const char *Version = "1.42 Beta [Bld 194]";
-const char *DebVersion = "1.42bld194-1";
+const char *Version = "1.42 Beta [Bld 195]";
+const char *DebVersion = "1.42bld195-1";
 LongInt VerNo = 0x142f;
 
 const char *InfoMessCopyright = "(C) 1992,2021 Alfred Arnold";
